syntax = "proto3";

package chat_v1;

option go_package = "github.com/agbgru/chat/pkg/chat_v1;chat_v1";

import "google/protobuf/timestamp.proto";

service Chat {
  rpc CreateChat(CreateChatRequest) returns (CreateChatResponse);
  rpc DeleteChat(DeleteChatRequest) returns (DeleteChatResponse);
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
}

message CreateChatRequest {
  repeated string usernames = 1;
}

message CreateChatResponse {
  int64 id = 1;
}

message DeleteChatRequest {
  int64 id = 1;
}

message DeleteChatResponse {}

message SendMessageRequest {
  string from = 1;
  string text = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message SendMessageResponse {}